client/app/main/main.css
body {
  /*background: #fff url('/assets/images/clarify-assets/scaled-at-75/clarity.png') no-repeat center center fixed;*/
  background: #fff url('/assets/images/clarify-assets-jpg/clarity.jpg') no-repeat center center fixed;
  -webkit-background-size: cover;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
  background-size: cover;
}

.thing-form {
    margin: 20px 0;
}

#banner {
    border-bottom: none;
}

#banner h1 {
    font-size: 7.9em;
    line-height: 1.1;
    letter-spacing: -1px;
}

.hero-unit {
    position: relative;
    padding: 30px 15px;
    color: #018752; /*light*/
    /*text-align: center;*/
    text-shadow: 0 1px 0 rgba(0, 0, 0, 0.1);
    background: rgba(107, 107, 107, 0.81); /*dark*/
    background: rgb(243, 243, 243);  /*light*/
}

.main-view{
  background: rgba(35, 35, 35, 0.79);
  margin: 10em auto 10em auto;
  height:20em;
  width: 100%;
}

.main-issues:link{
    color: #2267AB;
}

.main-logo{
  display:block;
  margin:auto;
}

.main-alert{
  margin-top: 5px;
}
.sub-heading{
  color: #CCB088;
}
#searchControl {
  background-color: rgba(107, 107, 107, 0.81);
  border-color:#cbcbcb;
  color: #fff;
}

#searchControl:focus {
  border-color:#049fee;
}
#searchControl::-webkit-input-placeholder {
  color: rgb(220, 220, 220);
}

#searchControl:-moz-placeholder { /* Firefox 18- */
  color: rgb(220, 220, 220);
}

#searchControl::-moz-placeholder {  /* Firefox 19+ */
  color: rgb(220, 220, 220);
}

#searchControl:-ms-input-placeholder {
  color: rgb(220, 220, 220);
}

#searchControl:focus::-webkit-input-placeholder {
  transition: opacity 0.5s 0.5s ease;
  opacity: 0;
}

#searchControl:focus:-moz-placeholder { /* Firefox 18- */
  transition: opacity 0.5s 0.5s ease;
  opacity: 0;
}

#searchControl:focus::-moz-placeholder {  /* Firefox 19+ */
  transition: opacity 0.5s 0.5s ease;
  opacity: 0;
}

#searchControl:focus:-ms-input-placeholder {
  transition: opacity 0.5s 0.5s ease;
  opacity: 0;
}

